Kosaraja algorithm has been implemented
Programm generates a dot description, where all nodes, that are in the
same cluster, have the same color

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.2)
 
-project(HW11-Kosaraio)
+project(HW11-Kosaraja)
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
 
-add_executable(Kosaraio main.cpp DotGenerator.cpp)
+add_executable(Kosaraja main.cpp DotGenerator.cpp)
 
-set_target_properties(Kosaraio PROPERTIES
+set_target_properties(Kosaraja PROPERTIES
   CXX_STANDARD 17
   CXX_STANDARD_REQUIRED ON
   COMPILE_OPTIONS "-Wpedantic;-Wall;-Wextra"
